2011-12-07  Lucas Forschler  <lforschler@apple.com>

    Merge 98416

    2011-10-25  Anders Carlsson  <andersca@apple.com>

            CG plug-ins are always given a context with a scale factor of 1, even when the device scale factor is something else
            https://bugs.webkit.org/show_bug.cgi?id=67227
            <rdar://problem/10048319>

            Reviewed by Sam Weinig.

            * PluginProcess/PluginControllerProxy.cpp:
            (WebKit::PluginControllerProxy::paint):
            Apply the scale factor when painting.

            * WebProcess/Plugins/PluginProxy.cpp:
            (WebKit::PluginProxy::paint):
            Apply the scale factor when painting.

            (WebKit::PluginProxy::geometryDidChange):
            Make sure to apply the contents scale factor to the backing store size.

            (WebKit::PluginProxy::update):
            Apply the scale factor (when painting).

2011-12-06  Lucas Forschler  <lforschler@apple.com>

    Merge 98413

    2011-10-25  Anders Carlsson  <andersca@apple.com>

            Plug-ins have no way to find out when the device scale factor changes
            https://bugs.webkit.org/show_bug.cgi?id=67226

            Reviewed by Sam Weinig.

            * PluginProcess/PluginControllerProxy.cpp:
            (WebKit::PluginControllerProxy::geometryDidChange):
            * PluginProcess/PluginControllerProxy.h:
            This now takes the contentsScaleFactor and calls contentsScaleFactorChanged on its plug-in
            if the scale factor changes.

            * PluginProcess/PluginControllerProxy.messages.in:
            GeometryDidChange now takes a contents scale factor parameter.

            * WebProcess/Plugins/Netscape/NetscapePlugin.h:
            * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
            (WebKit::NetscapePlugin::contentsScaleFactorChanged):
            Implement contentsScaleFactorChanged and call NPP_SetValue with the new scale factor.
